Started with implementation of the new design

--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
             </nav>
         </header>
 
-        <section class="section-top flex centered">
+        <section class="section-top flex centered">            
             <div class="welcome-text flex centered">
-                <h1>Hi, I'm Julian Jesacher!</h1>
+                <h1><br>JULIAN<br />JESACHER</h1>
                 <p>> Welcome to my portfolio 👋</p>
                 <button class="btn-contact-me rounded-button clickable">
                     <span>Contact me!</span>
                 </button>
             </div>
+            <div class="background-image"></div>
         </section>
 
         <section class="section-about-me">
