--- a/index.html
+++ b/index.html
@@ -9,166 +9,27 @@
     </head>
     <body>
         <header>
-            <nav class="container">
-                <div class="navbar flex">
-                    <a href="/" class="header-logo">
-                        <img src="https://paperpillar.com/assets/images/logo-light.png" alt="Logo" class="logo" />
-                    </a>
-                    <div class="navbar-menu flex centered">
-                        <div class="main-menu display-none">
-                            <a href="/" class="clickable plain-white-text">HOME</a>
-                        </div>
-                        <div class="mobile-menu">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                        </div>
+            <nav>
+                <div class="navbar">
+                    <div class="navbar-content-left">
+                        <div class="logo-wrapper"><span>Logo</span></div>
+                    </div>
+                    <div class="navbar-content-right">
+                        <li class="navbar-item">About me</li>
+                        <li class="navbar-item">Technologies</li>
+                        <li class="navbar-item">Projects</li>
+                        <li>
+                            <div class="darkmode-slider">
+                                <label for="darkmode-checkbox">
+                                    <input type="checkbox" id="darkmode-checkbox" />
+                                    <div class="slider"></div>
+                                </label>
+                            </div>
+                        </li>
+                        <li><button class="navbar-contact-btn">Contact me!</button></li>
                     </div>
                 </div>
             </nav>
         </header>
-
-        <section class="section-top flex centered">
-            <div class="welcome-text flex centered">
-                <h1><br />JULIAN<br />JESACHER</h1>
-                <p>> Welcome to my portfolio 👋</p>
-                <button class="btn-contact-me rounded-button button-shadow clickable">
-                    <span>Contact me!</span>
-                </button>
-            </div>
-            <div class="background-image"></div>
-        </section>
-
-        <section class="section-about-me">
-            <div class="container">
-                <div class="about-me">
-                    <div class="about-me-content flex">
-                        <img src="assets/portrait.png" alt="A portrait of myself" />
-                        <div class="about-me-text text-paragraph-width">
-                            <h2>About <span class="accent-text">me.</span></h2>
-                            <p class="text-paragraph-width">
-                                My name is Julian Jesacher and I am 19 years old. I'm very interested in programming and computer science in
-                                general. The seemingly infinite possibilities of software fascinate me.<br />
-                                In 2021 I graduated from highschool and I already knew that I wanted to focus my career on software
-                                development. I am currently pursuing a bachelors degree in computer science at the technical university of
-                                munich. Feel free to contact me if you have any questions.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="section-technologies">
-            <div class="container">
-                <div class="technologies">
-                    <div class="technologies-title">
-                        <h2>Technologies</h2>
-                        <p class="text-paragraph-width">
-                            Some technologies I've worked with.<br />
-                            Click the technology you're interested in
-                        </p>
-                    </div>
-                    <div class="technologies-content">
-                        <div class="technology" style="order: 1">
-                            <img src="/assets/java-logo.png" alt="Java logo" />
-                            <span>Java</span>
-                        </div>
-                        <div class="technology" style="order: 2">
-                            <img src="/assets/angular-logo.png" alt="Angular logo" />
-                            <span>Angular</span>
-                        </div>
-                        <div class="technology" style="order: 3">
-                            <img src="/assets/python-logo.png" alt="Python logo" />
-                            <span>Python</span>
-                        </div>
-                        <div class="technology" style="order: 4">
-                            <img src="/assets/html-logo.png" alt="HTML logo" />
-                            <span>HTML</span>
-                        </div>
-                        <div class="technology inactive" style="order: 5">
-                            <img src="/assets/css-logo.png" alt="CSS logo" />
-                            <span>CSS</span>
-                        </div>
-                        <div class="technology inactive" style="order: 6">
-                            <img src="/assets/javascript-logo.png" alt="Javascript logo" />
-                            <span>Javascript</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="section-projects">
-            <div class="container">
-                <div class="projects">
-                    <div class="section-title">
-                        <h2>&lt Projects /&gt</h2>
-                    </div>
-
-                    <div class="projects-description-wrapper">
-                        <div class="description">
-                            <img src="/assets/python-logo.png" alt="Python logo" />
-                            <p class="text-paragraph-width">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris interdum libero nec sem dignissim
-                                vestibulum. Aenean gravida ipsum eget dapibus ullamcorper. Cras placerat dui non libero luctus condimentum.
-                                Fusce venenatis quis massa ut porta. Pellentesque habitant morbi tristique senectus et netus et malesuada
-                                fames ac turpis egestas. Nunc dapibus velit velit, non bibendum leo vehicula vitae. Etiam tempor tincidunt
-                                leo sed iaculis. Maecenas orci mauris, hendrerit et magna et, elementum condimentum dui. Nullam ornare
-                                ultricies mi, sollicitudin cursus sapien blandit a. Nunc sed ultricies mauris.
-                            </p>
-                        </div>
-
-                        <div class="projects-wrapper">
-                            <div class="project">
-                                <img src="/assets/portrait.png" />
-                                <div class="project-content" id="project1">
-                                    <h3>Some randim Title like foodbok or sudoku or idk</h3>
-                                    <p>
-                                        orem ipsum dolor sit amet, consectetur adipiscing elit. Mauris interdum libero nec sem dignissim
-                                        vestibulum. Aenean gravida ipsum eget dapibus ullamcorper. Cras placerat dui non libero luctus
-                                        condimentum. Fusce venenatis quis massa ut porta. Pellentesque habitant morbi tristique senectus et
-                                        netus et malesuada fames ac turpis
-                                    </p>
-                                    <button class="view-project-button rounded-button button-shadow">
-                                        <span> VIEW PROJECT </span>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <footer>
-            <img class="footer-background" src="/assets/footer-bg.png" alt="Footer background" />
-            <div class="flex centered">
-                <div class="footer-content container">
-                    <h2>Do you have <span>any questions?</span></h2>
-                    <h3>Don´t hesitate to ask.</h3>
-                    <button class="btn-contact-me rounded-button clickable button-shadow">
-                        <span> Contact me! </span>
-                    </button>
-                    <div class="social-icons">
-                        <div class="social-wrapper">
-                            <a href="https://www.instagram.com/_julian_jsc/">
-                                <img src="/assets/social-icons/instagram.png" alt="Instagram logo" />
-                            </a>
-                        </div>
-                        <div class="social-wrapper">
-                            <a href="https://www.linkedin.com/in/julian-jesacher-08b262203/">
-                                <img src="/assets/social-icons/linkedin.png" alt="Linkedin logo" />
-                            </a>
-                        </div>
-                        <div class="social-wrapper">
-                            <a href="https://github.com/JulianJesacher">
-                                <img src="/assets/social-icons/github.png" alt="Github logo" />
-                            </a>
-                        </div>
-                    </div>
-                </div>               
-            </div>
-        </footer>
     </body>
 </html>
