--- a/index.html
+++ b/index.html
@@ -47,15 +47,64 @@
                     </p>
                     <div class="welcome-btn-social-wrapper">
                         <button class="welcome-contact-btn contact-btn">Contact me!</button>
-                        <div class="welcome-social-icon-wrapper">
-                            <div>1</div>
-                            <div>2</div>
-                            <div>3</div>
+                        <div class="welcome-social-icons-wrapper">
+                            <a href="#"
+                                ><lottie-player
+                                    class="social-icon-light"
+                                    src="https://assets4.lottiefiles.com/packages/lf20_easggm31.json"
+                                    background="transparent"
+                                    speed="1"
+                                    style="width: 70%; height: 70%"
+                                    hover
+                                    loop
+                                ></lottie-player>
+                                <lottie-player
+                                    class="social-icon-dark"
+                                    src="https://assets4.lottiefiles.com/packages/lf20_4igy6wx7.json"
+                                    background="transparent"
+                                    speed="1"
+                                    style="width: 70%; height: 70%"
+                                    hover
+                                    loop
+                                ></lottie-player
+                            ></a>
+                            <a href="#">
+                                <lottie-player
+                                    class="social-icon-light"
+                                    src="https://assets4.lottiefiles.com/packages/lf20_ewqwndz3.json"
+                                    background="transparent"
+                                    speed="1"
+                                    style="width: 65%; height: 65%"
+                                    hover
+                                    loop
+                                ></lottie-player>
+                                <lottie-player
+                                    class="social-icon-dark"
+                                    src="https://assets6.lottiefiles.com/packages/lf20_sowag5ll.json"
+                                    background="transparent"
+                                    speed="1"
+                                    style="width: 65%; height: 65%"
+                                    hover
+                                    loop
+                                ></lottie-player
+                            ></a>
+                            <a href="#">
+                                <lottie-player
+                                    src="https://assets10.lottiefiles.com/packages/lf20_k8myxshf.json"
+                                    background="transparent"
+                                    speed="1"
+                                    style="width: 80%; height: 80"
+                                    hover
+                                    loop
+                                ></lottie-player>
+                            </a>
                         </div>
                     </div>
                 </div>
-                <img class="welcome-portrait" src="/assets/portrait.png" alt="Portrait of myself">
+                <img class="welcome-portrait" src="/assets/portrait.png" alt="Portrait of myself" />
             </div>
         </section>
+
+        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     </body>
 </html>
