Add basic darkmode functionality

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                     <div class="welcome-btn-social-wrapper">
                         <button class="welcome-contact-btn contact-btn">Contact me!</button>
                         <div class="welcome-social-icons-wrapper">
-                            <a href="#"
-                                ><lottie-player
+                            <a href="#" title="Github">
+                                <lottie-player
                                     class="social-icon-light"
                                     src="https://assets4.lottiefiles.com/packages/lf20_easggm31.json"
                                     background="transparent"
@@ -68,7 +68,7 @@
                                     loop
                                 ></lottie-player
                             ></a>
-                            <a href="#">
+                            <a href="#" title="LinkedIn">
                                 <lottie-player
                                     class="social-icon-light"
                                     src="https://assets4.lottiefiles.com/packages/lf20_ewqwndz3.json"
@@ -88,7 +88,7 @@
                                     loop
                                 ></lottie-player
                             ></a>
-                            <a href="#">
+                            <a href="#" title="Instagram">
                                 <lottie-player
                                     src="https://assets10.lottiefiles.com/packages/lf20_k8myxshf.json"
                                     background="transparent"
@@ -106,5 +106,6 @@
         </section>
 
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+        <script type="text/javascript" src="app.js"></script>
     </body>
 </html>
