Add social links

--- a/index.html
+++ b/index.html
@@ -48,27 +48,7 @@
                     <div class="welcome-btn-social-wrapper">
                         <button class="welcome-contact-btn contact-btn">Contact me!</button>
                         <div class="welcome-social-icons-wrapper">
-                            <a href="#" title="Github">
-                                <lottie-player
-                                    class="social-icon-light"
-                                    src="https://assets4.lottiefiles.com/packages/lf20_easggm31.json"
-                                    background="transparent"
-                                    speed="1"
-                                    style="width: 70%; height: 70%"
-                                    hover
-                                    loop
-                                ></lottie-player>
-                                <lottie-player
-                                    class="social-icon-dark"
-                                    src="https://assets4.lottiefiles.com/packages/lf20_4igy6wx7.json"
-                                    background="transparent"
-                                    speed="1"
-                                    style="width: 70%; height: 70%"
-                                    hover
-                                    loop
-                                ></lottie-player
-                            ></a>
-                            <a href="#" title="LinkedIn">
+                            <a href="https://www.linkedin.com/in/julian-jesacher-08b262203/" title="LinkedIn">
                                 <lottie-player
                                     class="social-icon-light"
                                     src="https://assets4.lottiefiles.com/packages/lf20_ewqwndz3.json"
@@ -88,7 +68,28 @@
                                     loop
                                 ></lottie-player
                             ></a>
-                            <a href="#" title="Instagram">
+                            <a href="https://github.com/JulianJesacher" title="Github">
+                                <lottie-player
+                                    class="social-icon-light"
+                                    src="https://assets4.lottiefiles.com/packages/lf20_easggm31.json"
+                                    background="transparent"
+                                    speed="1"
+                                    style="width: 70%; height: 70%"
+                                    hover
+                                    loop
+                                ></lottie-player>
+                                <lottie-player
+                                    class="social-icon-dark"
+                                    src="https://assets2.lottiefiles.com/packages/lf20_j0eagrrd.json"
+                                    background="transparent"
+                                    speed="1"
+                                    style="width: 70%; height: 70%"
+                                    hover
+                                    loop
+                                ></lottie-player>
+                                </a
+                            >
+                            <a href="https://www.instagram.com/_julian_jsc/" title="Instagram">
                                 <lottie-player
                                     src="https://assets10.lottiefiles.com/packages/lf20_k8myxshf.json"
                                     background="transparent"
@@ -105,7 +106,7 @@
             </div>
         </section>
 
-        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
         <script type="text/javascript" src="app.js"></script>
+        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     </body>
 </html>
