Switch text color with darkmode

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Julian Jesacher</title>
         <link rel="stylesheet" href="styles/styles.css" />
     </head>
-    <body>
+    <body class="transition">
         <header>
             <nav>
                 <div class="navbar-wrapper">
@@ -16,9 +16,9 @@
                             <div class="logo-wrapper navbar-item"><span>Logo</span></div>
                         </div>
                         <div class="navbar-content-right">
-                            <li class="navbar-item">About me</li>
-                            <li class="navbar-item">Technologies</li>
-                            <li class="navbar-item">Projects</li>
+                            <li class="navbar-item transition">About me</li>
+                            <li class="navbar-item transition">Technologies</li>
+                            <li class="navbar-item transition">Projects</li>
                             <li>
                                 <div class="darkmode-slider">
                                     <label for="darkmode-checkbox">
@@ -103,6 +103,12 @@
                     </div>
                 </div>
                 <img class="welcome-portrait" src="/assets/portrait.png" alt="Portrait of myself" />
+            </div>
+        </section>
+
+        <section class="about-me-section">
+            <div class="about-me-wrapper">
+                
             </div>
         </section>
 
