Add the text to the about-me section

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <section class="welcome-section">
             <div class="welcome-wrapper">
                 <div class="welcome-content">
-                    <span>Hi, my name is</span>
-                    <h1>Julian<br />Jesacher</h1>
+                    <span class="transition">Hi, my name is</span>
+                    <h1 class="transition">Julian<br />Jesacher</h1>
                     <p>
                         I'm a computer science student<br />
                         at the tecnical university of munich<br />
@@ -48,7 +48,7 @@
                     <div class="welcome-btn-social-wrapper">
                         <button class="welcome-contact-btn contact-btn">Contact me!</button>
                         <div class="welcome-social-icons-wrapper">
-                            <a href="https://www.linkedin.com/in/julian-jesacher-08b262203/" title="LinkedIn">
+                            <a href="https://www.linkedin.com/in/julian-jesacher-08b262203/" title="LinkedIn" class="transition">
                                 <lottie-player
                                     class="social-icon-light"
                                     src="https://assets4.lottiefiles.com/packages/lf20_ewqwndz3.json"
@@ -68,7 +68,7 @@
                                     loop
                                 ></lottie-player
                             ></a>
-                            <a href="https://github.com/JulianJesacher" title="Github">
+                            <a href="https://github.com/JulianJesacher" title="Github" class="transition">
                                 <lottie-player
                                     class="social-icon-light"
                                     src="https://assets4.lottiefiles.com/packages/lf20_easggm31.json"
@@ -87,9 +87,8 @@
                                     hover
                                     loop
                                 ></lottie-player>
-                                </a
-                            >
-                            <a href="https://www.instagram.com/_julian_jsc/" title="Instagram">
+                            </a>
+                            <a href="https://www.instagram.com/_julian_jsc/" title="Instagram" class="transition">
                                 <lottie-player
                                     src="https://assets10.lottiefiles.com/packages/lf20_k8myxshf.json"
                                     background="transparent"
@@ -108,7 +107,19 @@
 
         <section class="about-me-section">
             <div class="about-me-wrapper">
-                
+                <div class="about-me-content-wrapper">
+                    <div style="width: 55vw;"></div>
+                    <div class="about-me-content">
+                        <h2>About me</h2>
+                        <p>
+                            Hello! My nam is Julian, I am 19 years old and currently studying computer science at the technical university
+                            of munich.<br />
+                            In my free time I really enjoy to work on my own software projects. I am working on all kinds of stuff but
+                            currently focusing on building web applications.<br />
+                            If you have any questions or if you want to get in touch, feel free to contact me!
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
 
