--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <div class="welcome-social-icons-wrapper">
                             <a href="https://www.linkedin.com/in/julian-jesacher-08b262203/" title="LinkedIn" class="transition">
                                 <lottie-player
-                                    class="social-icon-light"
+                                    class="social-icon transition"
                                     src="https://assets4.lottiefiles.com/packages/lf20_ewqwndz3.json"
                                     background="transparent"
                                     speed="1"
@@ -58,29 +58,11 @@
                                     hover
                                     loop
                                 ></lottie-player>
-                                <lottie-player
-                                    class="social-icon-dark"
-                                    src="https://assets6.lottiefiles.com/packages/lf20_sowag5ll.json"
-                                    background="transparent"
-                                    speed="1"
-                                    style="width: 65%; height: 65%"
-                                    hover
-                                    loop
-                                ></lottie-player
-                            ></a>
+                            </a>
                             <a href="https://github.com/JulianJesacher" title="Github" class="transition">
                                 <lottie-player
-                                    class="social-icon-light"
+                                    class="social-icon transition"
                                     src="https://assets4.lottiefiles.com/packages/lf20_easggm31.json"
-                                    background="transparent"
-                                    speed="1"
-                                    style="width: 70%; height: 70%"
-                                    hover
-                                    loop
-                                ></lottie-player>
-                                <lottie-player
-                                    class="social-icon-dark"
-                                    src="https://assets2.lottiefiles.com/packages/lf20_j0eagrrd.json"
                                     background="transparent"
                                     speed="1"
                                     style="width: 70%; height: 70%"
@@ -90,6 +72,7 @@
                             </a>
                             <a href="https://www.instagram.com/_julian_jsc/" title="Instagram" class="transition">
                                 <lottie-player
+                                    class="transition"
                                     src="https://assets10.lottiefiles.com/packages/lf20_k8myxshf.json"
                                     background="transparent"
                                     speed="1"
