--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </div>
         </section>
 
-        <script type="text/javascript" src="app.js"></script>
-        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>        
+        <script type="text/javascript" src="darkmode.controller.js"></script>
     </body>
 </html>
