--- a/index.html
+++ b/index.html
@@ -89,9 +89,12 @@
         </section>
 
         <section class="about-me-section">
+            <svg class="about-me-background" width="1920" height="1228" viewBox="0 0 1920 1228" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1893.77 0L35.4566 131H0V1228L1920 1127.5V0H1893.77Z" />
+            </svg>
             <div class="about-me-wrapper">
                 <div class="about-me-content-wrapper">
-                    <div style="width: 55vw"></div>
+                    <div class="about-me-laptop-wrapper"></div>
                     <div class="about-me-content">
                         <h2>About me</h2>
                         <p>
@@ -106,7 +109,20 @@
             </div>
         </section>
 
-        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>        
+        <section class="projects-section">
+            <div class="section-title">
+                <h2>Projects</h2>
+                <p>These are some of my cooles projects</p>
+            </div>
+            <div class="project-wrapper">
+                <div class="project">
+                    <div class="project-title">Great Project 1</div>
+                    <img class="project-image" src="/assets/project-image.jpg" alt="Great Project 1 image" />
+                </div>
+            </div>
+        </section>
+
+        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
         <script type="text/javascript" src="darkmode.controller.js"></script>
     </body>
 </html>
