Add social icon to project and style project title

--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
                     <div class="welcome-btn-social-wrapper">
                         <button class="welcome-contact-btn contact-btn">Contact me!</button>
                         <div class="welcome-social-icons-wrapper">
-                            <a href="https://www.linkedin.com/in/julian-jesacher-08b262203/" title="LinkedIn" class="transition">
+                            <a
+                                href="https://www.linkedin.com/in/julian-jesacher-08b262203/"
+                                title="LinkedIn"
+                                class="transition social-icon-wrapper"
+                            >
                                 <lottie-player
-                                    class="social-icon transition"
+                                    class="social-icon"
                                     src="https://assets4.lottiefiles.com/packages/lf20_ewqwndz3.json"
                                     background="transparent"
                                     speed="1"
@@ -59,9 +63,9 @@
                                     loop
                                 ></lottie-player>
                             </a>
-                            <a href="https://github.com/JulianJesacher" title="Github" class="transition">
+                            <a href="https://github.com/JulianJesacher" title="Github" class="transition social-icon-wrapper">
                                 <lottie-player
-                                    class="social-icon transition"
+                                    class="social-icon"
                                     src="https://assets4.lottiefiles.com/packages/lf20_easggm31.json"
                                     background="transparent"
                                     speed="1"
@@ -70,9 +74,8 @@
                                     loop
                                 ></lottie-player>
                             </a>
-                            <a href="https://www.instagram.com/_julian_jsc/" title="Instagram" class="transition">
+                            <a href="https://www.instagram.com/_julian_jsc/" title="Instagram" class="transition social-icon-wrapper">
                                 <lottie-player
-                                    class="transition"
                                     src="https://assets10.lottiefiles.com/packages/lf20_k8myxshf.json"
                                     background="transparent"
                                     speed="1"
@@ -117,7 +120,20 @@
             <div class="project-wrapper">
                 <div class="project">
                     <div class="project-title">Great Project 1</div>
-                    <img class="project-image" src="/assets/project-image.jpg" alt="Great Project 1 image" />
+                    <div class="project-image-wrapper">
+                        <img class="project-image" src="/assets/project-image.jpg" alt="Great Project 1 image" />
+                        <a href="https://github.com/JulianJesacher" title="Github" class="transition social-icon-wrapper">
+                            <lottie-player
+                                class="project-social-icon"
+                                src="https://assets4.lottiefiles.com/packages/lf20_easggm31.json"
+                                background="transparent"
+                                speed="1"
+                                style="width: 70%; height: 70%"
+                                hover
+                                loop
+                            ></lottie-player>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
