--- a/index.html
+++ b/index.html
@@ -134,6 +134,14 @@
                             ></lottie-player>
                         </a>
                     </div>
+                    <div class="project-content">
+                        <p class="project-description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet
+                            odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                        </p>
+                        <div class="project-content-separator"></div>
+                        <a href="#" class="view-project-btn">View demo</a>
+                    </div>
                 </div>
             </div>
         </section>
