Fully implement responsive project design

--- a/index.html
+++ b/index.html
@@ -141,6 +141,17 @@
                         </p>
                         <div class="project-content-separator"></div>
                         <a href="#" class="view-project-btn">View demo</a>
+                        <a href="https://github.com/JulianJesacher" title="Github" class="transition social-icon-wrapper">
+                            <lottie-player
+                                class="project-social-icon"
+                                src="https://assets4.lottiefiles.com/packages/lf20_easggm31.json"
+                                background="transparent"
+                                speed="1"
+                                style="width: 70%; height: 70%"
+                                hover
+                                loop
+                            ></lottie-player>
+                        </a>
                     </div>
                 </div>
             </div>
