--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="about-me-content">
                         <h2>About me</h2>
                         <p>
-                            Hello! My nam is Julian, I am 19 years old and currently studying computer science at the technical university
+                            Hello! My name is Julian, I am 19 years old and currently studying computer science at the technical university
                             of munich.<br />
                             In my free time I really enjoy to work on my own software projects. I am working on all kinds of stuff but
                             currently focusing on building web applications.<br />
