--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
                         clip-rule="evenodd"
                         d="M2143 594.5C2249.5 731.5 2069.73 935.672 2009.5 976C1919.72 1036.11 866.966 1128.73 760.597 1147.67C647.754 1167.76 520.928 1133.86 434.585 1058.48C347.758 982.678 -37.5002 910 3.49979 733.5C44.4998 557 278.808 532.601 294.019 424.628C310.408 308.288 301.452 166.53 392.697 92.517C485.636 17.1307 625.522 76.091 744.049 59.5906C841.486 46.0261 932.124 -14.4139 1028.77 3.96711C1126.69 22.5919 1195.29 104.277 1277.26 161.003C1373.58 227.665 1507.41 204.943 1550 309.499C1604.36 442.944 1637.5 496 1749.5 512C1861.5 528 2036.5 457.5 2143 594.5Z"
                     />
-                    <text x="721" y="65">JULIAN</text>
+                    <text x="721" y="65" class="footer-background-text">JULIAN</text>
                     <g id="footer-backgound-text-group" clip-path="url(#footer-background-clipPath)">
-                        <text x="721" y="65">JULIAN</text>
+                        <text x="721" y="65" class="footer-background-text">JULIAN</text>
                     </g>
                 </svg>
             </div>
