--- a/index.html
+++ b/index.html
@@ -232,5 +232,6 @@
 
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
         <script type="text/javascript" src="darkmode.controller.js"></script>
+        <script type="text/javascript" src="footer.controller.js"></script>
     </body>
 </html>
