Add footer background decorator

--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
                     </g>
                 </svg>
             </div>
+            <img class="footer-background-decorator" src="/assets/Footer-background-decorator.svg" alt="Decorator">
         </section>
 
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
