Fix footer background decorator on large screens

--- a/index.html
+++ b/index.html
@@ -228,7 +228,11 @@
                     </g>
                 </svg>
             </div>
-            <img class="footer-background-decorator" src="/assets/Footer-background-decorator.svg" alt="Decorator">
+            <div class="footer-background-limiter">
+                <div>
+                    <img class="footer-background-decorator" src="/assets/Footer-background-decorator.svg" alt="Decorator" />
+                </div>
+            </div>
         </section>
 
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
