Add borders and colors to input elements

--- a/index.html
+++ b/index.html
@@ -237,11 +237,25 @@
 
         <div class="contact-me-page">
             <div class="contact-me-wrapper">
+                <div class="contact-me-content">
+                    <h1>Let<span>'</span>s Talk</h1>
+                    <div class="contact-me-form">
+                        <input type="text" id="nameInput">
+                        <input type="email" id="emailInput">
+                        <textarea name="Message" id="messageInput" cols="30" rows="10"></textarea>
+                    </div>
+                    <button id="sendEmailButton" class="contact-btn">Submit</button>
+                </div>
                 <!--Shadow-->
                 <svg class="contact-page-shadow" viewBox="0 0 657 1043" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
-                        d="M25.1559 65.3232C26.2461 48.7818 37.4443 34.8951 53.5642 31.0282C99.2972 20.0575 200.543 0 329.5 0C459.139 0 560.773 20.2703 606.157 31.2016C621.92 34.9984 632.992 48.476 634.391 64.6296C640.643 136.82 657 343.1 657 525.5C657 707.48 640.718 913.231 634.434 985.87C633.014 1002.29 621.591 1015.85 605.451 1019.16C562.715 1027.94 469.072 1043 329.5 1043C188.513 1043 94.3907 1027.63 52.2651 1018.9C36.7972 1015.69 25.5948 1003.04 23.6781 987.359C15.4329 919.907 -4.82587 728.669 1.99998 525.5C8.76992 323.995 20.6146 134.226 25.1559 65.3232Z"
+                        d="M25.1559 65.3232C26.2461 48.7818 37.4443 34.8951 53.5642 31.0282C99.2971 20.0575 200.543 0 329.5 0C465.546 0 534.622 26.1419 559.466 38.3523C566.88 41.9961 571.953 48.5401 574.51 56.3951C590.003 103.989 645.345 289.74 650.5 529C655.229 748.505 641.011 922.662 634.775 986.596C633.209 1002.65 621.907 1015.76 606.106 1019.03C563.677 1027.79 469.789 1043 329.5 1043C188.513 1043 94.3907 1027.63 52.2651 1018.9C36.7972 1015.69 25.5948 1003.04 23.6781 987.359C15.4329 919.907 -4.82587 728.669 1.99998 525.5C8.76992 323.995 20.6146 134.226 25.1559 65.3232Z"
+                        fill="url(#paint0_linear_209_57)"
                     />
+                    <linearGradient id="contact-page-shadow-gradient" x1="0%" y1="0%" x2="100%" y2="0%">
+                        <stop offset="0%" style="stop-color: #ffd747; stop-opacity: 1" />
+                        <stop offset="100%" style="stop-color: #ffa800; stop-opacity: 1" />
+                    </linearGradient>
                 </svg>
                 <!--Background-->
                 <svg class="contact-page-background" viewBox="0 0 657 1043" fill="none" xmlns="http://www.w3.org/2000/svg">
