Add placeholder to all input and textarea fields

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     <h1>Let<span>'</span>s Talk</h1>
                     <div class="contact-me-form">
                         <div>
-                            <input type="text" id="nameInput" required />
+                            <input type="text" id="nameInput" placeholder=" " />
                             <label for="nameInput">
                                 <span style="transition-delay: 0ms">N</span>
                                 <span style="transition-delay: 50ms">a</span>
@@ -250,8 +250,30 @@
                                 <span style="transition-delay: 200ms">*</span>
                             </label>
                         </div>
-                        <input type="email" id="emailInput" required />
-                        <textarea name="Message" id="messageInput" cols="30" rows="10" required></textarea>
+                        <div>
+                            <input type="email" id="emailInput" placeholder=" " />
+                            <label for="emailInput">
+                                <span style="transition-delay: 0ms">E</span>
+                                <span style="transition-delay: 50ms">m</span>
+                                <span style="transition-delay: 100ms">a</span>
+                                <span style="transition-delay: 150ms">i</span>
+                                <span style="transition-delay: 200ms">l</span>
+                                <span style="transition-delay: 250ms">*</span>
+                            </label>
+                        </div>
+                        <div>
+                            <textarea name="Message" id="messageInput" cols="30" rows="10" required></textarea>
+                            <label for="messageInput">
+                                <span style="transition-delay: 0ms">M</span>
+                                <span style="transition-delay: 50ms">e</span>
+                                <span style="transition-delay: 100ms">s</span>
+                                <span style="transition-delay: 150ms">s</span>
+                                <span style="transition-delay: 200ms">a</span>
+                                <span style="transition-delay: 250ms">g</span>
+                                <span style="transition-delay: 300ms">e</span>
+                                <span style="transition-delay: 350ms">*</span>
+                            </label>
+                        </div>
                     </div>
                     <button id="sendEmailButton" class="contact-btn">Submit</button>
                 </div>
