--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Julian Jesacher</title>
         <link rel="stylesheet" href="styles/styles.css" />
+        <script type="text/javascript" src="contact-me.controller.js"></script>
+        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     </head>
     <body>
         <header>
@@ -238,44 +240,52 @@
         <div class="contact-me-page">
             <div class="contact-me-wrapper">
                 <div class="contact-me-content">
-                    <h1>Let<span>'</span>s Talk</h1>
-                    <div class="contact-me-form">
-                        <div>
-                            <input type="text" id="nameInput" placeholder=" " />
-                            <label for="nameInput">
-                                <span style="transition-delay: 0ms">N</span>
-                                <span style="transition-delay: 50ms">a</span>
-                                <span style="transition-delay: 100ms">m</span>
-                                <span style="transition-delay: 150ms">e</span>
-                                <span style="transition-delay: 200ms">*</span>
-                            </label>
+                    <form>
+                        <h1>Let<span>'</span>s Talk</h1>
+                        <div class="contact-me-form">
+                            <div>
+                                <input type="text" id="nameInput" placeholder=" " />
+                                <label for="nameInput">
+                                    <span style="transition-delay: 0ms">N</span>
+                                    <span style="transition-delay: 50ms">a</span>
+                                    <span style="transition-delay: 100ms">m</span>
+                                    <span style="transition-delay: 150ms">e</span>
+                                    <span style="transition-delay: 200ms">*</span>
+                                </label>
+                            </div>
+                            <div>
+                                <input type="email" id="emailInput" placeholder=" " />
+                                <label for="emailInput">
+                                    <span style="transition-delay: 0ms">E</span>
+                                    <span style="transition-delay: 50ms">m</span>
+                                    <span style="transition-delay: 100ms">a</span>
+                                    <span style="transition-delay: 150ms">i</span>
+                                    <span style="transition-delay: 200ms">l</span>
+                                    <span style="transition-delay: 250ms">*</span>
+                                </label>
+                            </div>
+                            <div>
+                                <textarea name="Message" id="messageInput" cols="30" rows="10" required></textarea>
+                                <label for="messageInput">
+                                    <span style="transition-delay: 0ms">M</span>
+                                    <span style="transition-delay: 50ms">e</span>
+                                    <span style="transition-delay: 100ms">s</span>
+                                    <span style="transition-delay: 150ms">s</span>
+                                    <span style="transition-delay: 200ms">a</span>
+                                    <span style="transition-delay: 250ms">g</span>
+                                    <span style="transition-delay: 300ms">e</span>
+                                    <span style="transition-delay: 350ms">*</span>
+                                </label>
+                            </div>
+                            <!--recaptcha-->
+                            <div
+                                class="g-recaptcha"
+                                data-sitekey="6Ld54R0hAAAAABQR3pqp0bns77cKtHRVcj7akLuF"
+                                data-callback="captcha_successful"
+                            ></div>
+                            <button id="sendEmailButton" class="contact-btn" type="submit">Submit</button>
                         </div>
-                        <div>
-                            <input type="email" id="emailInput" placeholder=" " />
-                            <label for="emailInput">
-                                <span style="transition-delay: 0ms">E</span>
-                                <span style="transition-delay: 50ms">m</span>
-                                <span style="transition-delay: 100ms">a</span>
-                                <span style="transition-delay: 150ms">i</span>
-                                <span style="transition-delay: 200ms">l</span>
-                                <span style="transition-delay: 250ms">*</span>
-                            </label>
-                        </div>
-                        <div>
-                            <textarea name="Message" id="messageInput" cols="30" rows="10" required></textarea>
-                            <label for="messageInput">
-                                <span style="transition-delay: 0ms">M</span>
-                                <span style="transition-delay: 50ms">e</span>
-                                <span style="transition-delay: 100ms">s</span>
-                                <span style="transition-delay: 150ms">s</span>
-                                <span style="transition-delay: 200ms">a</span>
-                                <span style="transition-delay: 250ms">g</span>
-                                <span style="transition-delay: 300ms">e</span>
-                                <span style="transition-delay: 350ms">*</span>
-                            </label>
-                        </div>
-                    </div>
-                    <button id="sendEmailButton" class="contact-btn">Submit</button>
+                    </form>
                 </div>
                 <!--Shadow-->
                 <svg class="contact-page-shadow" viewBox="0 0 657 1043" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -306,8 +316,6 @@
 
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
         <script type="text/javascript" src="darkmode.controller.js"></script>
-        <script type="text/javascript" src="footer.controller.js"></script>
-        <script type="text/javascript" src="contact-me.controller.js"></script>
-        <script src="https://www.google.com/recaptcha/api.js"></script>
+        <script type="text/javascript" src="footer.controller.js"></script>       
     </body>
 </html>
